<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scaleType="centerCrop"
    android:id="@+id/register_client_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/app_background" >

    <!-- Header -->
    <com.example.gymapp.ui.HeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Card Register Client -->
    <Button
        android:id="@+id/cardRegisterClient"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:drawableStart="?attr/register_client_icon"
        android:background="@drawable/bg_card"
        android:text="@string/CARD_client"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:enabled="false" />

    <!-- Stepper -->
    <ImageView
        android:id="@+id/imgStepperThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:src="?attr/stepper_form_three"
        android:contentDescription="@string/APP_description_stepper_three" />

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Phone Number -->
    <TextView
        android:id="@+id/lblClientPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/FORM_client_phone"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/inpClientPhone" />

    <EditText
        android:id="@+id/inpClientPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="5dp"
        android:backgroundTint="@color/input_underline"
        android:inputType="phone"
        android:autofillHints="phone" />

    <!-- Email -->
    <TextView
        android:id="@+id/lblClientEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/FORM_client_email"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/inpClientEmail" />

    <EditText
        android:id="@+id/inpClientEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="5dp"
        android:backgroundTint="@color/input_underline"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress" />

    <!-- Client membership -->
    <RadioGroup
        android:id="@+id/rdgClientType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_margin="32dp">

        <!-- Member -->
        <RadioButton
            android:id="@+id/rdbMember"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/FORM_client_member"
            android:textSize="24sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:buttonTint="?attr/android:textColor"
            android:textColor="?attr/android:textColor"
            android:checked="true" />

        <!-- Flex Space -->
        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp" />

        <!-- Client -->
        <RadioButton
            android:id="@+id/rdbClient"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/FORM_client_client"
            android:textSize="24sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:buttonTint="?attr/android:textColor"
            android:textColor="?attr/android:textColor" />
    </RadioGroup>

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Form Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <!-- Back -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_secondary_button"
            android:textColor="@color/button_text"
            android:text="@string/FORM_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textAllCaps="true" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <!-- Register -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_primary_button"
            android:textColor="@color/button_text"
            android:text="@string/FORM_register"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/footer_layout" />
</LinearLayout>