<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scaleType="centerCrop"
    android:id="@+id/dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/app_background" >

    <!-- Header -->
    <com.example.gymapp.ui.HeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Register Client -->
    <Button
        android:id="@+id/btnRegisterClient"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_card"
        android:drawableStart="?attr/register_client_icon"
        android:text="@string/CARD_client"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- Register Payment -->
    <Button
        android:id="@+id/btnRegisterPayment"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:drawableStart="?attr/register_payment_icon"
        android:background="@drawable/bg_card"
        android:text="@string/CARD_payment"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <!-- Register Activity(Class) -->
    <Button
        android:id="@+id/btnRegisterClass"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:background="@drawable/bg_card"
        android:drawableStart="?attr/register_activity_icon"
        android:text="@string/CARD_activity"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- View Membership ID Card -->
    <Button
        android:id="@+id/btnIdCardView"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:drawableStart="?attr/view_id_card_icon"
        android:background="@drawable/bg_card"
        android:text="@string/CARD_id_card"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <!-- View Pending Payments -->
    <Button
        android:id="@+id/btnPendingPayments"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:drawableStart="?attr/pending_payments_icon"
        android:background="@drawable/bg_card"
        android:text="@string/CARD_pending_payment"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false" />

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/footer_layout" />
</LinearLayout>