<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scaleType="centerCrop"
    android:id="@+id/register_client_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/app_background" >

    <!-- Header -->
    <com.example.gymapp.ui.HeaderLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Card Register Client -->
    <Button
        android:id="@+id/cardRegisterClient"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:drawableStart="?attr/register_client_icon"
        android:background="@drawable/bg_card"
        android:text="@string/CARD_client"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:enabled="false" />

    <!-- Stepper -->
    <ImageView
        android:id="@+id/imgStepperTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:src="?attr/stepper_form_two"
        android:contentDescription="@string/APP_description_stepper_two" />

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Street -->
    <TextView
        android:id="@+id/lblClientStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/FORM_client_street"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/inpClientStreet" />

    <EditText
        android:id="@+id/inpClientStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="5dp"
        android:backgroundTint="@color/input_underline"
        android:inputType="text"
        android:autofillHints="false" />

    <!-- Number -->
    <TextView
        android:id="@+id/lblClientNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/FORM_client_number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/inpClientNumber" />

    <EditText
        android:id="@+id/inpClientNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="5dp"
        android:backgroundTint="@color/input_underline"
        android:inputType="number"
        android:autofillHints="false" />

    <!-- District -->
    <TextView
        android:id="@+id/lblClientDistrict"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:text="@string/FORM_client_district"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:labelFor="@id/inpClientDistrict" />

    <EditText
        android:id="@+id/inpClientDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:paddingHorizontal="5dp"
        android:backgroundTint="@color/input_underline"
        android:inputType="text"
        android:autofillHints="false" />

    <!-- Flex Space (this will push the buttons down) -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <!-- Form Buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <!-- Back -->
        <Button
            android:id="@+id/btnBack"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_secondary_button"
            android:textColor="@color/button_text"
            android:text="@string/FORM_back"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="16dp"
            android:layout_height="wrap_content" />

        <!-- Next -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_primary_button"
            android:textColor="@color/button_text"
            android:text="@string/FORM_next"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- Footer -->
    <include
        android:id="@+id/footer"
        layout="@layout/footer_layout" />
</LinearLayout>